# sdk-python

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: clean.py
scripts/extract_types/: __init__.py  tsort.py
scripts/helper/: exec.py
